# SCALJ

./: .gitignore  MANIFEST.in  README.md  Snakefile  methanol.ipynb  pyproject.toml  setup.py  verify_fix.py
.snakemake/metadata/: b3V0cHV0L3N5c3RlbV9tZXRoYW5vbC5wa2w=  b3V0cHV0L3RyYWplY3RvcnlfbWV0aGFub2wuZGNk
examples/: config.yaml  multi_mixture_config.yaml
scalej/: __init__.py  __main__.py  config.py  constants.py  energy.py  evaluation.py  io.py  models.py  scaling.py  simulation.py  systems.py  training.py  types.py
scalej/analysis/: __init__.py  _evaluation.py  _plots.py  _summary.py
scalej/cli/: __init__.py  _main.py  _utils.py  main.py  utils.py
scalej/data/: __init__.py  _datasets.py  _io.py  _scaling.py
scalej/simulation/: __init__.py  _mlp.py  _simulation.py  _systems.py
scalej/training/: __init__.py  _ddp.py  _loss.py  _predict.py  _train.py  _trainable.py  _types.py
scalej/workflow/: __init__.py  _benchmark_node.py  _dataset_node.py  _evaluation_node.py  _export_node.py  _md_node.py  _ml_potential_node.py  _mlp_md_node.py  _node.py  _scaling_node.py  _system_setup_node.py  _training_node.py  _utils.py  base_nodes.py  benchmark_node.py  dataset_node.py  evaluation_node.py  export_node.py  md_node.py  ml_potential_node.py  mlp_md_node.py  node.py  scaling_node.py  system_setup_node.py  training_node.py  validation_node.py
scalj/: __init__.py  __main__.py  config.py  dataset.py  plots.py  utils.py
scalj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scalj/cli/: __init__.py  generate_config.py  main.py  run.py  utils.py
scalj/engine/: __init__.py  ml_potential.py  scaling.py  simulation.py  thermodynamic.py
scalj/fitting/: __init__.py  training.py
scalj/workflow/: __init__.py  _utils.py  benchmark_node.py  evaluation_node.py  md_node.py  ml_potential_node.py  training_node.py  validation_node.py
tests/: conftest.py  test_types.py
tests/data/: test_datasets.py  test_io.py  test_scaling.py
tests/simulation/: conftest.py  test_mlp.py  test_simulation.py  test_systems.py
tests/training/: conftest.py  test_loss.py  test_predict.py  test_train.py  test_trainable.py
