[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SCALeJ"
version = "0.1.0"
description = "SCALeJ: Lennard-Jones Parameter Fitting via Condensed-Phase Volume-Scaling."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SCALeJ Contributors"}
]
keywords = ["molecular dynamics", "machine learning", "force field", "Lennard-Jones", "fitting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
#    "pydantic-units>=0.1.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
    "openmm>=8.0.0",
    "openff-toolkit>=0.14.0",
    "smee>=0.1.0",
    "datasets>=2.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]

[project.scripts]
scalej = "scalej.cli.main:main"

[project.urls]
Homepage = "https://github.com/JMorado/scalej"
Repository = "https://github.com/JMorado/scalej"

[tool.setuptools.packages.find]
where = ["."]
include = ["scalej*"]
exclude = ["examples*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=scalej",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that may take significant time",
]
